# segment-anything-cpp-wrapper

./: CMakeLists.txt  sam.cpp  test.cpp
gflags/lib/: gflags.lib  gflags_debug.lib  gflags_nothreads.lib  gflags_nothreads_debug.lib  gflags_nothreads_static.lib  gflags_nothreads_static_debug.lib  gflags_static.lib  gflags_static_debug.lib
sam_wrapper/: sam_wrapper.cpp  sam_wrapper.h  sam_wrapper.vcxproj  sam_wrapper.vcxproj.filters
